<resources>

    <string name="senha">Senha:</string>
    <string name="email">Email:</string>
    <string name="recuperar_senha">Recuperar senha</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="entrar">Entrar</string>
    <string name="confirmar_email">Confirmar Email:</string>
    <string name="confirmar_senha">Confirmar Senha:</string>
    <string name="entrar_facebook">Entrar pelo facebook</string>
    <string name="entrar_google">Entrar pelo google</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="app_name">Lanche Facil</string>
    <string name="aviso">Insira a baixo o email cadastrado para que seja enviado um código de verificação</string>
    <string name="enviar">Enviar</string>
    <string name="codigo">Codigo:</string>
    <string name="verificar">Verificar</string>
    <string name="nova_senha">Nova senha:</string>
    <string name="alterar">Alterar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="title_activity_anuncios">AnunciosActivity</string>
    <string name="comSenha">Comfirmar Senha:</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="comNewSenha">Confirmar nova senha:</string>
    <string name="titulo_anuncio">Titulo do anúncio</string>
    <string name="facebook_app_id">291388058112722</string>
    <string name="fb_login_protocol_scheme">fb291388058112722</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_meus_anuncios">MeusAnunciosActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="local">Local:</string>
    <string name="usar_gps">Usar GPS</string>
    <string name="estado">Estado:</string>
    <string name="cep">CEP:</string>
    <string name="rua">Endereço:</string>
    <string name="cidade">Cidade:</string>
    <string name="uf">UF:</string>
    <string name="informacoes_do_pedido">Informações do pedido:</string>
    <string name="titulo">Título:</string>
    <string name="valor">Valor:</string>
    <string name="descricao">Descrição:</string>
    <string name="cadastrar_anuncio">Cadastrar Anúncio</string>
    <string name="telefone">Telefone:</string>
    <string name="title_activity_meus_anuncios_u">MeusAnunciosUActivity</string>
    <string name="detalhes">Detalhes</string>
    <string name="ver_telefone">Ver telefone</string>
    <string name="salvar_alteracoes">Salvar alterações</string>
    <string name="fazer_pedido">Fazer Pedido</string>
    <string name="favoritos">adicionar aos favoritos</string>
    <string name="nome">Nome:</string>
    <string name="lanche">Lanche:</string>
    <string name="quantd">Quantidade:</string>
    <string name="enviar_pedido">Enviar Pedido</string>
    <string name="atualizar_anuncio">Atualizar Anúncio</string>
    <string name="cancelar_cadastro">Cancelar cadastro</string>
    <string name="title_activity_localizacao">Map</string>
    <string name="ver_localizacao">Ver localização</string>
    <string name="editar">Editar Anuncio</string>
    <string name="excluir">Excluir anúncio</string>
    <string name="ocutar">Ocultar Anuncio</string>
    <string name="excluir_conta">Excluir conta</string>
    <string name="duvidas_frequentes">Duvidas Frequentes</string>
    <string name="pergunta1">Porque meu anúncio foi excluído?</string>
    <string name="pergunta2">Porque não consigo adicionar uma foto?</string>
    <string name="pergunta3">Como excluir minha conta?</string>
    <string name="pergunta4">Como visualizar meus anúncios?</string>
    <string name="pergunta5">Como saber onde o vendedor está?</string>
    <string name="pergunta6">Como solicitar uma entrega?</string>
    <string name="remover">Remover</string>
    <string name="alterar_senha">Alterar Senha</string>

    <string name="action_settings">Settings</string>
    <string name="logo">logo da fabrica</string>
    <string name="fixa">Fixa Anuncio</string>
    <string name="plano_a">Plano A</string>
    <string name="plano_b">Plano B</string>
    <string name="txt_plano_a">Impulsionar o anúncio por uma semana</string>
    <string name="txt_plano_b">Impulsionar o anúncio por um mês</string>
    <string name="logo_app">Logo do aplicativo lanche facil</string>
    <string name="imagem_anuncio">Imagem do anuncio</string>
    <string name="foto_perfil">Foto do perfil</string>
    <string name="alterar_foto">Alterar Foto</string>
    <string name="nome_do_us_ario">Nome do Usúario</string>
    <string name="salvar_altera_es">Salvar Alterações</string>
</resources>
