<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CadastroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageIMG"
                    android:layout_width="230dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/logo_app"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/logoapp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/editCadEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/bg_edit_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editNome">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editCadEmail1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/editNome"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_edit_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageIMG">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editCadNome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nome"
                        android:inputType="textCapSentences" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/buttonCadCadratrar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="50dp"
                    android:padding="16dp"
                    android:text="@string/cadastrar"
                    android:theme="@style/botaoPadrao"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editCadConfSenha" />

                <EditText
                    android:id="@+id/editCadSenha"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/senha"
                    android:inputType="textPassword"
                    android:background="@drawable/bg_edit_text"
                    android:paddingBottom="15dp"
                    android:paddingStart="3dp"
                    android:paddingTop="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editCadEmail" />

                <EditText
                    android:id="@+id/editCadConfSenha"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/confirmar_senha"
                    android:inputType="textPassword"
                    android:paddingBottom="15dp"
                    android:paddingStart="3dp"
                    android:paddingTop="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:background="@drawable/bg_edit_text"
                    app:layout_constraintTop_toBottomOf="@+id/editCadSenha" />

            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>