<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.FazerPedidoActivity">

    <ImageView
        android:id="@+id/imageFazerPedido"
        android:layout_width="wrap_content"
        android:layout_height="171dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/padrao" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout7"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/bg_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/imageFazerPedido">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textFazerPedidoNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout8"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/bg_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout7">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textFazerPedidoLanche"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lanche" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout9"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/bg_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout8">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textFazerPedidoQtd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantd" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttonFazerPedidoEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/enviar_pedido"
        android:theme="@style/botaoPadrao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout9" />
</android.support.constraint.ConstraintLayout>